Moving towards DWinProgramming bindings towards windows api

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Build/libX11"]
 	path = Build/libX11
 	url = https://github.com/rikkimax/libX11
+[submodule "Build/DWinProgramming"]
+	path = Build/DWinProgramming
+	url = https://github.com/AndrejMitrovic/DWinProgramming.git
