--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Build/DWinProgramming"]
 	path = Build/DWinProgramming
 	url = https://github.com/AndrejMitrovic/DWinProgramming.git
+[submodule "Build/WindowsAPI"]
+	path = Build/WindowsAPI
+	url = https://github.com/AndrejMitrovic/WindowsAPI.git
